# llvm-lua

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh
include/: AST.h  ASTVisitor.h  CodeGen.h  CodeGenerator.h  Lexer.h  Parser.h  Token.h  Visitor.h
lua/: array.lua  hello  luac  output  output.ll  save.lua  test  test.lua  type.lua
src/: AST.cpp  CodeGen.cpp  Lexer.cpp  Parser.cpp  lexer.l  main.cpp  parser.y
